# ucla-cs144-project3

./: .gitignore  Cargo.toml  README.md  app.js  asconfig.json  manage-rust.sh  package.json
install/: install-rust.sh  manage-rust.sh  uninstall-rust.sh
public/: index.html  main.js  styles.css
src/assembly/: index.ts
src/rust/: Cargo.toml  lib.rs
