[package]
name = "rust-blur"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = ["console"] }

# Optional: For better error handling
console_error_panic_hook = { version = "0.1.7", optional = true }

# Optional: For a smaller WASM binary in release mode
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["wee_alloc", "console_error_panic_hook"]

[profile.release]
# Enable optimizations for release build
opt-level = 3
# Enable debug info
debug = false
# Enable link time optimization
lto = true
# Enable code splitting
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
# Enable WebAssembly optimizations
wasm-opt = ['-O4', '--enable-simd']
