[package]
name = "rust-blur"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
wasm-bindgen = "0.2.84"

[features]

[profile.release]
# Enable optimizations for release build
opt-level = 3
# Enable debug info
debug = false
# Enable link time optimization
lto = true
# Enable code splitting
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
# Enable WebAssembly optimizations
wasm-opt = ['-O4', '--enable-simd']
